# AI_Predictive_Models_for_Credit_Underwriting

./: requirements.txt
.devcontainer/: devcontainer.json
AI_Predictive_Models_for_Credit_Underwriting-main/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
AI_Predictive_Models_for_Credit_Underwriting-main/Agile Documents/: jatin_agile_template (2).xlsm
AI_Predictive_Models_for_Credit_Underwriting-main/Application/: about_me.py  app.py  chatbot_prompt.py  home.py  loan_chatbot.py  loan_core_ml.py  requirements.txt  styles.py
