[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-default-prediction"
version = "1.0.0"
description = "AI Predictive Models for Credit Underwriting"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.57.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "lightgbm==4.3.0",
    "flask==3.0.3",
    "groq==0.9.0",
    "python-dotenv==1.0.1",
    "google-generativeai==0.7.2",
    "httpx==0.27.2",
]
